--- a/src-website/index.html
+++ b/src-website/index.html
@@ -6,9 +6,9 @@
 	<meta content="text/html; charset=iso-8859-1" http-equiv="content-type">
 </head>
 <body>
-	<!-- align the page to the center and scale it to 600px width -->
+	<!-- align the page to the center and scale it to 500px width -->
 	<div class="content" align="center">
-	<table width="600px"><tr><td>
+	<table width="500px"><tr><td>
 
 	<!-- the title banner -->
 	<h2>Varylab - Discrete Surface Optimization</h2>
@@ -22,6 +22,9 @@
 		in Geometry and Dynamics</a>. Varylab implements various variational 
 		principles for discrete surfaces, e.g., planarity of faces, equal 
 		lengths of edges, curvature of parameter curves.
+		It is designed to be an extensible and modular tool for experiments
+		with discrete surfaces in pure mathematics and applications
+		in industrial geometry.
 		</p> 
 		<br>
 		<div class="section_title">Varylab Team Members:<br><img class="hrline" alt="" src="img/hr.png"></div>
@@ -32,7 +35,7 @@
 		<br>
 		<br>
 		<a href="img/screen01.jpg">
-			<img alt="varylab screenshot" src="img/screen01.jpg" width="600">
+			<img alt="varylab screenshot" src="img/screen01.jpg" width="100%">
 		</a>
 	</div>
 
@@ -46,6 +49,37 @@
 			<li>Comprehensive graphical user interface</li>
 			<li>Data visualization modules</li>
 			<li>Python scripting API</li>
+		</ul>
+	</div>
+
+	<!-- publications section -->
+	<div class="section">
+		<div class="section_title">Publications that use Varylab:<br><img class="hrline" alt="" src="img/hr.png"></div>
+		<ul>
+			<li>
+			S. Sechelmann, T. Roerig, and A. I. Bobenko. <i>Quasiisothermic Mesh Layout.</i> 
+			In Hesselgren, L.; Sharma, S.; Wallner, J.; Baldassini, N.; Bompas, P.; 
+			Raynaud, J. (Eds.).
+			<a href="http://www.springer.com/architecture+%26+design/architecture/book/978-3-7091-1250-2"><i>Advances in Architectural Geometry 2012</i></a>.  
+			2012, 344 p. 285 illus. in color. ISBN 978-3-7091-1250-2
+			</li>
+			<br>
+			<li>
+			E. Lafuente E, S. Sechelmann, T. Roerig, and C. Gengnagel. <i>Topology 
+			Optimisation of Regular and Irregular Elastic Gridshells by means of a 
+			Non-linear Variational Method.</i> In Hesselgren, L.; Sharma, S.; Wallner, 
+			J.; Baldassini, N.; Bompas, P.; Raynaud, J. (Eds.).
+      		<a href="http://www.springer.com/architecture+%26+design/architecture/book/978-3-7091-1250-2"><i>Advances in Architectural Geometry 2012</i></a>.  
+			2012, 344 p. 285 illus. in color. ISBN 978-3-7091-1250-2
+			</li>
+			<br>
+			<li>
+			E. Lafuente E, C. Gengnagel, S. Sechelmann, T. Rörig.
+			<i>On the Materiality and Structural Behaviour of highly-elastic Gridshell Structures.</i>
+      		<a href="http://www.springerlink.com/content/p78p531r42201773/">In Computational 
+      		Design Modeling: Proceedings of the Design Modeling Symposium Berlin 2011</a>, 
+			pages 123-135. Springer, 2011.
+			</li>
 		</ul>
 	</div>
 
