--- a/src-website/index.html
+++ b/src-website/index.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- align the page to the center and scale it to 500px width -->
 	<div class="content" align="center">
-	<table width="500px"><tr><td>
+	<table class="maintable"><tr><td>
 
 	<!-- the title banner -->
 	<h2>Varylab - Discrete Surface Optimization</h2>
@@ -56,15 +56,14 @@
 	<div class="section">
 		<div class="section_title">Publications that use Varylab:<br><img class="hrline" alt="" src="img/hr.png"></div>
 		<ul>
-			<li>
+			<li class="bottom_space">
 			S. Sechelmann, T. Roerig, and A. I. Bobenko. <i>Quasiisothermic Mesh Layout.</i> 
 			In Hesselgren, L.; Sharma, S.; Wallner, J.; Baldassini, N.; Bompas, P.; 
 			Raynaud, J. (Eds.).
 			<a href="http://www.springer.com/architecture+%26+design/architecture/book/978-3-7091-1250-2"><i>Advances in Architectural Geometry 2012</i></a>.  
 			2012, 344 p. 285 illus. in color. ISBN 978-3-7091-1250-2
 			</li>
-			<br>
-			<li>
+			<li class="bottom_space">
 			E. Lafuente E, S. Sechelmann, T. Roerig, and C. Gengnagel. <i>Topology 
 			Optimisation of Regular and Irregular Elastic Gridshells by means of a 
 			Non-linear Variational Method.</i> In Hesselgren, L.; Sharma, S.; Wallner, 
@@ -72,8 +71,7 @@
       		<a href="http://www.springer.com/architecture+%26+design/architecture/book/978-3-7091-1250-2"><i>Advances in Architectural Geometry 2012</i></a>.  
 			2012, 344 p. 285 illus. in color. ISBN 978-3-7091-1250-2
 			</li>
-			<br>
-			<li>
+			<li class="bottom_space">
 			E. Lafuente E, C. Gengnagel, S. Sechelmann, T. Rörig.
 			<i>On the Materiality and Structural Behaviour of highly-elastic Gridshell Structures.</i>
       		<a href="http://www.springerlink.com/content/p78p531r42201773/">In Computational 
